给自定义tab页添加关闭功能
给pane组件新增一个prop：closable的布尔值，来支持是否可以关闭这个pane，如果开启，在tabs的标签标题上会有一个关闭的按钮。

--- a/实战/开发一个标签页组件/style.css
+++ b/实战/开发一个标签页组件/style.css
@@ -40,3 +40,23 @@
 .tabs-content{
     padding: 8px 0;
 }
+
+.btn-close{
+    width: 20px;
+    height: 20px;
+    border-color: transparent;
+    border-radius: 50%;
+    background: transparent;
+}
+
+.btn-close:hover{
+    background: #eaeaea;
+    cursor:pointer;
+}
+
+.btn-close:before{
+    content: '×';
+    color: #5c6b77;
+    position: relative;
+    left: -1.5px;
+}
